objects/LiteratureShipMethod__c.object
<CustomObject>
    <fields>
        <fullName>CarrierCode__c</fullName>
        <description>Carrier Code
varchar2(10)</description>
        <label>Carrier Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description
varchar2(256)</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCode__c</fullName>
        <description>ServiceCode
varchar2(10)</description>
        <label>Service Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipMethod__c</fullName>
        <description>ShipMethod
varchar2(50)</description>
        <externalId>true</externalId>
        <label>Ship Method</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TrackUrl__c</fullName>
        <description>TrackUrl
varchar2(256)</description>
        <label>Track Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This contains ship method data from Literature Fulfillment System (Nexttouch)</description>
    <label>Literature Ship Method</label>
    <nameField>
        <label>Literature Ship Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Literature Ship Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CarrierCode__c</columns>
        <columns>Description__c</columns>
        <columns>ServiceCode__c</columns>
        <columns>ShipMethod__c</columns>
        <columns>TrackUrl__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>